<resources>
    <string name="app_name">BinCompanion</string>

    <!--These are strings for managing connection-->
    <string name="connected">CONNECTED</string>
    <string name="connecting">CONNECTING</string>
    <string name="failed">FAILED</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="not_connected">NOT CONNECTED</string>
    <string name="lost">LOST CONNECTION</string>

    <!--Strings for managing Mode -->
    <string name="collection">IN COLLECTION</string>
    <string name="disposal">IN DISPOSAL</string>
    <string name="travelCollect">TRAVEL TO COLLECTION</string>
    <string name="travelDispose">TRAVEL TO DISPOSAL</string>
    <string name="stopped">STOPPED</string>
    <string name="error">ERROR</string>

    <!--Strings for managing Fill -->
    <string name="full">FULL</string>
    <string name="partial_full">PARTIAL</string>
    <string name="near_empty">SOME</string>
    <string name="empty">EMPTY</string>

    <!--These are status screen strings-->
    <string name="connected_Label">Connection Status: </string>
    <string name="mode_Label">Mode:</string>
    <string name="fill_Label">Fill Level:</string>

    <!-- Menu Labels -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <!--Button Labels -->
    <string name="callButton_Label">Go To Disposal</string>
    <string name="returnButton_Label">Go To Collection</string>
    <string name="resumeButton_Label">Resume</string>
    <string name="stopButton_Label">Stop</string>
    <string name="reconnectButton_Label">Reconnect</string>

    <!-- Fragment Titles -->
    <string name="deviceTitle">Select Paired Device</string>
    <string name="errorTitle">ERROR</string>

    <!--Fragment Messages -->
    <string name="nopairMsg">No devices paired to device</string>
    <string name="errorMsg">BinBot is struggling with an error! Please locate BinBot and address problem!</string>
    <string name="noBTMsg">This device does not have Bluetooth capabilities, please run on compatible device and try again</string>
</resources>
